<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCalories">

    <EditText
        android:id="@+id/input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="357dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_new_daily_limit"
        android:inputType="number|numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/currentLabel"
        app:layout_constraintTop_toBottomOf="@+id/currentMax" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginBottom="294dp"
        android:onClick="onUpdateClicked"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/input"
        app:layout_constraintTop_toBottomOf="@+id/input" />

    <TextView
        android:id="@+id/currentLabel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="17dp"
        android:text="@string/current_max"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/input"
        app:layout_constraintEnd_toStartOf="@+id/currentMax"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentMax"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/currentLabel"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>